Add basic frequency analysis
- Include a basic function to estimate a guess's probability of being
  in the answer list as well as its familiarity for me personally. (May
  be used to develop a better opening selection.)
- Include a potential list of offensive words to be filtered out,
  though the current list has bad quality and is only a placeholder.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "code-runner.executorMapByGlob": {
     "*.py": "conda activate wordy && python -u"
-  }
+  },
+  "cSpell.words": [
+    "frozendict",
+    "scipy",
+    "unigram"
+  ]
 }
